<resources>
    <string name="abc_cancel">Cancel</string>
    <string name="abc_coped">Coped!</string>
    <string name="abc_done_button">Done!</string>
    <string name="abc_error_browserNotFound">Please install web-browser</string>
    <string name="abc_launcherName" translatable="false">OpenToday</string>
    <string name="abc_not_success">Failed</string>
    <string name="abc_ok">OK</string>
    <string name="abc_opentoday" translatable="false">OpenToday</string>
    <string name="abc_pressAgainForExitWarning">Press back once more to exit.</string>
    <string name="abc_success">Successfully!</string>
    <string name="abc_unknown">Unknown</string>
    <string name="aboutapp_click_changelog">What\'s new?</string>
    <string name="aboutapp_click_issues">Bugs/Issues</string>
    <string name="aboutapp_click_licenses">OpenSource licences</string>
    <string name="aboutapp_click_sourceCode">Source Code</string>
    <string name="aboutapp_text_branch">Branch:</string>
    <string name="aboutapp_text_developer">Developer:</string>
    <string name="aboutapp_text_license">License:</string>
    <string name="aboutapp_text_package">Package:</string>
    <string name="aboutapp_text_version">Version:</string>
    <string name="aboutapp_title">About</string>
    <string name="changelogFragment_toolbar_title">What\'s new</string>
    <string name="crash_activity_sendToDeveloper">Send to developer</string>
    <string name="crash_activity_sendToDeveloper_agree">I agree</string>
    <string name="crash_activity_sendToDeveloper_message">Sending anonymous statistics is disabled in your settings.\n\nThe following data will be used:\n* The text of the crash report that you see on the screen\n* IP address</string>
    <string name="crash_activity_sendToDeveloper_title">Send crash-report?</string>
    <string name="crash_activity_updateAvailable">Update available!\nClick to download new version</string>
    <string name="crash_notification_big_summary" translatable="false">""</string>
    <string name="crash_notification_big_text" translatable="false">""</string>
    <string name="crash_notification_big_title">OpenToday crashed :(</string>
    <string name="crash_notification_subtext" translatable="false">""</string>
    <string name="crash_notification_text">Click to see details</string>
    <string name="crash_notification_title">OpenToday crashed</string>
    <string name="dialog_editItemFilter_month">Month</string>
    <string name="dialog_editItemFilter_second">Second</string>
    <string name="dialog_editItemFilter_title_currentValue">C</string>
    <string name="dialog_editItemFilter_title_field">Field</string>
    <string name="dialog_editItemFilter_title_invert">Invert</string>
    <string name="dialog_editItemFilter_title_mode">Mode</string>
    <string name="dialog_editItemFilter_title_shift">Shift</string>
    <string name="dialog_editItemFilter_title_value">Value</string>
    <string name="dialog_editItemFilter_weekOfYear">Week of year</string>
    <string name="dialog_editItemFilter_year">Year</string>
    <string name="dialog_iconSelector_none">Without icon</string>
    <string name="dialog_iconSelector_title">Select a icon…</string>
    <string name="dialog_itemNotification_apply">Apply</string>
    <string name="dialog_itemNotification_cancel">Cancel</string>
    <string name="dialog_itemNotification_defaultColor">No use</string>
    <string name="dialog_itemNotification_dialogTitle">Edit a item notification</string>
    <string name="dialog_itemNotification_empty_description">Press (+) button for add item notification</string>
    <string name="dialog_itemNotification_empty_title">No notifications here</string>
    <string name="dialog_itemNotification_fullScreen">Is fullscreen</string>
    <string name="dialog_itemNotification_incorrectNotificationId">Incorrect notification id field</string>
    <string name="dialog_itemNotification_notificationColor">Notification color</string>
    <string name="dialog_itemNotification_notifyid">Notification ID</string>
    <string name="dialog_itemNotification_previewViewOnly">FullScreen Preview is ViewOnly</string>
    <string name="dialog_itemNotification_sound">FullScreen Sound</string>
    <string name="dialog_itemNotification_subtext">Sub text</string>
    <string name="dialog_itemNotification_testNotify">Test send notify</string>
    <string name="dialog_itemNotification_text">Notification text</string>
    <string name="dialog_itemNotification_textFromItemText">Text from item text</string>
    <string name="dialog_itemNotification_time">Time: %s</string>
    <string name="dialog_itemNotification_title">Notification title</string>
    <string name="dialog_itemNotification_titleFromItemText">Title from item text</string>
    <string name="dialog_itemNotification_vibrate">Vibrate</string>
    <string name="dialog_itemTag_apply">Apply</string>
    <string name="dialog_itemTag_message" translatable="false" />
    <string name="dialog_itemTag_title">Item tag</string>
    <string name="dialog_itemTag_titleNotMayEmpty">Title is required!</string>
    <string name="dialog_itemTag_title_hint">Enter name…</string>
    <string name="dialog_itemTag_value_hint">Value (optional)</string>
    <string name="dialog_selectItemAction_cancel">Cancel</string>
    <string name="dialog_selectItemAction_message">Click to select</string>
    <string name="dialog_selectItemAction_title">Select Action</string>
    <string name="dialog_selectItemType_generic_title">Select item type</string>
    <string name="dialog_selectItemType_select">Select</string>
    <string name="export_allItems">All items</string>
    <string name="export_allItems_info">Export all tabs of items</string>
    <string name="export_clipdata_label">OpenToday export</string>
    <string name="export_colorHistory">Color history of color pickers</string>
    <string name="export_colorHistory_info">Color history</string>
    <string name="export_dialogMessage_hint">Enter text for import (optional)</string>
    <string name="export_error">Error: %s</string>
    <string name="export_settings">Settings</string>
    <string name="export_settings_info">Export settings of app</string>
    <string name="export_success">Export success: Coped to clipboard</string>
    <string name="fastChanges_dialog_apply">OK</string>
    <string name="fastChanges_dialog_cancel">Cancel</string>
    <string name="fastChanges_dialog_dontAsk">Don\'t ask</string>
    <string name="fastChanges_dialog_title">Easy-to-make changes</string>
    <string name="filterRegistry_filterType_DATE"><![CDATA[Date&Time]]></string>
    <string name="filterRegistry_filterType_ITEM_STAT">Item stat</string>
    <string name="filterRegistry_filterType_LOGIC_CONTAINER">Container</string>
    <string name="fragment_about_secretSettingsWarning">Don\'t spam…</string>
    <string name="fragment_deleteItems_delete_apply">DELETE</string>
    <string name="fragment_deleteItems_delete_cancel">Cancel</string>
    <string name="fragment_deleteItems_delete_title">Delete %s item(s)?\n(%s include child-items)</string>
    <string name="fragment_developer_crash">Crash!</string>
    <string name="fragment_developer_featureFlags">Feature flags</string>
    <string name="fragment_developer_icons">Icons…</string>
    <string name="fragment_developer_plugins">Plugins</string>
    <string name="fragment_developer_plugins_message">Enter plugins separate by comma , \nAvailable:\n  * gcp - global changes</string>
    <string name="fragment_developer_plugins_reloadedNotification">Plugins reloaded! (-5s)</string>
    <string name="fragment_developer_plugins_title">Plugins</string>
    <string name="fragment_developer_profiler">Profiler…</string>
    <string name="fragment_enterPincode_timeout">Try later (reopen app)</string>
    <string name="fragment_enterPincode_title">Enter pin-code</string>
    <string name="fragment_filterGroup_itemFilter_editor_error_unknownFilter">Unknown filter! This is a bug. Report to developer.\nCanonical: %s</string>
    <string name="fragment_filterGroup_itemFilter_editor_rootFilterEditor_title">Root filter editor:</string>
    <string name="fragment_filter_group_item_filter_editor_outdatedItemFilterSchemeTitle">This item uses outdated item-filter scheme.</string>
    <string name="fragment_filter_group_item_filter_editor_outdatedItemFilterScheme_FixButton">Merge to new</string>
    <string name="fragment_import_dialog_importMessage_import">Import</string>
    <string name="fragment_import_dialog_importMessage_title">Message from import</string>
    <string name="fragment_import_dialog_main_cancel">Cancel</string>
    <string name="fragment_import_dialog_main_import">Import</string>
    <string name="fragment_import_dialog_main_info_empty">Empty…</string>
    <string name="fragment_import_dialog_main_info_items">* Items: %s</string>
    <string name="fragment_itemEditor_module_text_openTextEditor">Open text editor</string>
    <string name="fragment_itemEditor_module_text_text_hint">Enter text…</string>
    <string name="fragment_itemEditor_module_text_text_title">Text</string>
    <string name="fragment_itemEditor_text_paragraphColorize">Formatting support</string>
    <string name="fragment_itemEditor_text_textColor">Text color</string>
    <string name="item_text_clickableUrls">Clickable URLs</string>
    <string name="item_text_editText">Edit text</string>
    <string name="menuItem_copy">Copy</string>
    <string name="menuItem_minimize">Minimize</string>
    <string name="menuItem_selected">Selected</string>
    <string name="menu_itemEditor_copyItemId">Copy ID</string>
    <string name="menu_itemEditor_deleteItem">Delete</string>
    <string name="menu_itemEditor_export">Export</string>
    <string name="menu_itemEditor_saveItem">Save</string>
    <string name="settings_colorHistory_title">Color history</string>
    <string name="settings_export">Export</string>
    <string name="settings_minimizeGrayColor">Minimize gray color</string>
    <string name="settings_parseTimeFromQuickNote">Parse time from quick note</string>
    <string name="settings_quickNote">Quick Note notification</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_trimItemNamesOnEdit">Trim item names on item editor</string>
    <string name="toolbar_debug">Debug</string>
    <string name="toolbar_file">File</string>
    <string name="toolbar_items">Items</string>
    <string name="toolbar_more_file_import">Import</string>
    <string name="toolbar_more_file_importFromClipboard">Import from clipboard</string>
    <string name="toolbar_more_file_import_cancel">Cancel</string>
    <string name="toolbar_more_file_import_hint">Paste exported text or URL</string>
    <string name="toolbar_more_file_import_import">Import!</string>
    <string name="toolbar_more_file_import_textHint">Enter import text or URL here</string>
    <string name="toolbar_more_file_saveAll">Save all</string>
    <string name="toolbar_more_opentoday_about">About</string>
    <string name="toolbar_more_opentoday_calendar">Calendar</string>
    <string name="toolbar_more_opentoday_settings">Settings</string>
    <string name="toolbar_more_opentoday_toggleLogsOverlay">DEBUG: Toggle logs overlay</string>
    <string name="toolbar_opentoday" translatable="false">@string/abc_opentoday</string>
    <string name="toolbar_selection">Selection</string>
    <string name="toolbar_tabs">Tabs</string>
    <string name="fragment_itemEditor_module_countdownCheckbox_roundToDays">Todo: ROUND TO DAYS</string>
    <string name="fragment_itemEditor_module_countdownCheckbox_step_title">TODO: Step</string>
    <string name="fragment_itemEditor_module_countdownCheckbox_step_hint">Enter step...</string>
    <string name="fragment_itemEditor_module_countdownCheckbox_availableStep_title">TODO: Available steps</string>
    <string name="fragment_itemEditor_module_countdownCheckbox_availableStep_hint">TODO: availableStep hint</string>
</resources>