<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/notificationId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/dialog_itemNotification_notifyid"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/dialog_itemNotification_title"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/titleFromItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_itemNotification_titleFromItemText" />

    <com.fazziclay.opentoday.util.opentodaybutton.MaterialButtonWithColorIndicator
        android:id="@+id/notificationColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_itemNotification_notificationColor" />

    <ImageButton
        android:id="@+id/icon"
        android:scaleType="fitXY"
        android:src="@drawable/minimize_gray_foreground"
        android:layout_width="60sp"
        android:layout_gravity="end"
        android:layout_height="55sp"
        android:contentDescription="Icon" />

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/dialog_itemNotification_text"
        android:importantForAutofill="no" />


    <CheckBox
        android:id="@+id/textFromItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_itemNotification_textFromItemText" />

    <EditText
        android:id="@+id/notifySubText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/dialog_itemNotification_subtext"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/time"
        android:text="@string/dialog_itemNotification_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/fullScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_itemNotification_fullScreen" />

    <CheckBox
        android:id="@+id/previewViewOnly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_itemNotification_previewViewOnly" />

    <CheckBox
        android:id="@+id/sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_itemNotification_sound" />

    <Button
        android:id="@+id/test"
        android:text="@string/dialog_itemNotification_testNotify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>