<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/selected"
        android:checkable="true"
        android:title="@string/menuItem_selected" />

    <item
        android:id="@+id/minimize"
        android:checkable="true"
        android:icon="@android:drawable/ic_menu_more"
        android:iconTint="#DD2B95BC"
        android:title="@string/menuItem_minimize" />

    <item
        android:id="@+id/copy"
        android:title="@string/menuItem_copy" />

    <group android:id="@+id/textItem">
        <item android:checkable="true" android:id="@+id/textItem_clickableUrls" android:title="@string/uidialog_edit_textentry_clickableUrls" />
        <item android:id="@+id/textItem_editText" android:title="@string/item_text_editText" />
    </group>
</menu>