<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5sp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_theme_title"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/theme_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/settings_theme_title"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/quickNote_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_quickNote" />

    <CheckBox
        android:id="@+id/parseTimeFromQuickNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_parseTimeFromQuickNote" />

    <CheckBox
        android:id="@+id/minimizeGrayColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_minimizeGrayColor" />

    <CheckBox
        android:id="@+id/trimItemNamesOnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_trimItemNamesOnEdit" />

</LinearLayout>