<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.OpenToday.Toolbar.Section.Root.File">

    <Button
        android:id="@+id/importDataFromClipboard"
        android:visibility="gone"
        android:text="@string/toolbar_more_file_importFromClipboard"
        style="@style/Theme.OpenToday.Toolbar.Section.Button.File.ImportFromClipboard" />

    <Button
        android:id="@+id/importData"
        android:text="@string/toolbar_more_file_import"
        style="@style/Theme.OpenToday.Toolbar.Section.Button.File.Import" />

    <Button
        android:id="@+id/saveAll"
        android:text="@string/toolbar_more_file_saveAll"
        style="@style/Theme.OpenToday.Toolbar.Section.Button.File.SaveAll" />

</LinearLayout>