<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.OpenToday.Toolbar.Section.Root.OpenToday">

    <LinearLayout
        android:id="@+id/debug"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/debug_toggleDebugOverlayText"
            android:text="@string/toolbar_more_opentoday_toggleLogsOverlay"
            style="@style/Theme.OpenToday.Toolbar.Section.Button.OpenToday.ToggleLogsOverlay" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calendar"
            android:text="@string/toolbar_more_opentoday_calendar"
            style="@style/Theme.OpenToday.Toolbar.Section.Button.OpenToday.Calendar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settings"
            android:text="@string/toolbar_more_opentoday_settings"
            style="@style/Theme.OpenToday.Toolbar.Section.Button.OpenToday.Settings" />

        <Button
            android:id="@+id/about"
            android:text="@string/toolbar_more_opentoday_about"
            style="@style/Theme.OpenToday.Toolbar.Section.Button.OpenToday.About" />
    </LinearLayout>
</LinearLayout>