<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.OpenToday.ItemEditModule">

    <TextView
        android:id="@+id/titleOfText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/openTextEditor"
        android:layout_alignBottom="@id/openTextEditor"
        android:layout_toStartOf="@id/openTextEditor"
        android:gravity="bottom"
        android:minHeight="23sp"
        android:text="@string/fragment_itemEditor_module_text_text_title"/>

    <ImageButton
        android:id="@+id/openTextEditor"
        android:layout_width="48sp"
        android:layout_height="40sp"
        android:src="@android:drawable/ic_menu_edit"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#44000000"
        android:contentDescription="@string/fragment_itemEditor_module_text_openTextEditor" />

    <EditText
        android:id="@+id/text"
        android:hint="@string/fragment_itemEditor_module_text_text_hint"
        android:layout_below="@id/openTextEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

    <CheckBox
        android:id="@+id/paragraphColorize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:minHeight="0sp"
        android:text="@string/fragment_itemEditor_text_paragraphColorize" />

    <!-- TODO: 2023.05.21 Rename @string id's -->
    <CheckBox
        android:id="@+id/clickableUrls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/paragraphColorize"
        android:minHeight="0sp"
        android:text="@string/item_text_clickableUrls" />

    <TextView
        android:id="@+id/textColor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clickableUrls"
        android:text="@string/fragment_itemEditor_text_textColor" />

    <RelativeLayout
        android:id="@+id/textColor_edit"
        android:layout_below="@id/textColor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/textColor_indicator"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_toStartOf="@id/default_text_color"
            android:background="@drawable/shape_color_indicator"
            android:backgroundTint="#ff000f"
            android:orientation="horizontal" />

        <CheckBox
            android:id="@+id/default_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:minHeight="0sp"/>
    </RelativeLayout>
</RelativeLayout>