<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextClock
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/plugins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_developer_plugins" />


        <Button
            android:id="@+id/crash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#aaaaaa00"
            android:text="@string/fragment_developer_crash" />

        <Button
            android:id="@+id/featureFlags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#aaa00aaa"
            android:text="@string/fragment_developer_featureFlags" />

        <TextView
            android:id="@+id/debugText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>